// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/rules/attr-case.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/attr-case.md inline validation: incorrect 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 4,
        "line": 1,
        "message": "Attribute "ID" should be lowercase",
        "offset": 3,
        "ruleId": "attr-case",
        "ruleUrl": "https://html-validate.org/rules/attr-case.html",
        "selector": "#foo",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<p ID="foo"></p>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/attr-case.md inline validation: multiple 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 4,
        "line": 3,
        "message": "Attribute "fooBar" should be lowercase or uppercase",
        "offset": 33,
        "ruleId": "attr-case",
        "ruleUrl": "https://html-validate.org/rules/attr-case.html",
        "selector": "p:nth-child(3)",
        "severity": 2,
        "size": 6,
      },
    ],
    "source": "<p foobar></p>
<p FOOBAR></p>
<p fooBar></p>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/attr-case.md inline validation: svg-viewbox 1`] = `[]`;
